syntax = "proto3";

package models;

service PushService {
  rpc Push(stream Chunk) returns (UploadStatus) {}
}

enum UploadStatusCode {
  UNKNOWN = 0;
  OK = 1;
  FAILED = 2;
}

message Chunk {
  bytes content = 1;
}

message UploadStatus {
  string response_message = 1;
  UploadStatusCode code = 2;
}